--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@material-ui/core": "^4.10.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.2",
     "@react-navigation/native": "^5.5.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.8.0",
