--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/netinfo": "^5.9.2",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.5.1",
+    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -34,6 +35,7 @@
     "eslint": "6.8.0",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.58.0",
+    "react-native-dotenv": "^0.2.0",
     "react-test-renderer": "16.11.0",
     "redux-logger": "^3.0.6"
   },
